// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ResourceList default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section
      className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    >
      <div
        className="bx--structured-list-tbody"
      >
        <label
          aria-label="Item A"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item A
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item A"
            type="radio"
            value="Item A"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
        <label
          aria-label="Item B"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={1}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item B
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item B"
            type="radio"
            value="Item B"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
        <label
          aria-label="Item C"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={2}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item C
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item C"
            type="radio"
            value="Item C"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ResourceList with action 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section
      className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    >
      <div
        className="bx--structured-list-tbody"
      >
        <label
          aria-label="Item A"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={-1}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item A
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
            role="presentation"
          >
            <button
              className="bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Configure
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2"
                  width="28"
                  x="2"
                  y="26"
                />
                <path
                  d="M25.4,9c0.8-0.8,0.8-2,0-2.8c0,0,0,0,0,0l-3.6-3.6c-0.8-0.8-2-0.8-2.8,0c0,0,0,0,0,0l-15,15V24h6.4L25.4,9z M20.4,4L24,7.6	l-3,3L17.4,7L20.4,4z M6,22v-3.6l10-10l3.6,3.6l-10,10H6z"
                />
              </svg>
            </button>
          </div>
        </label>
        <label
          aria-label="Item B"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={-1}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item B
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
            role="presentation"
          >
            <button
              className="bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Configure
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2"
                  width="28"
                  x="2"
                  y="26"
                />
                <path
                  d="M25.4,9c0.8-0.8,0.8-2,0-2.8c0,0,0,0,0,0l-3.6-3.6c-0.8-0.8-2-0.8-2.8,0c0,0,0,0,0,0l-15,15V24h6.4L25.4,9z M20.4,4L24,7.6	l-3,3L17.4,7L20.4,4z M6,22v-3.6l10-10l3.6,3.6l-10,10H6z"
                />
              </svg>
            </button>
          </div>
        </label>
        <label
          aria-label="Item C"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={-1}
        >
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item C
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
            role="presentation"
          >
            <button
              className="bx--btn bx--btn--ghost"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Configure
              <svg
                aria-hidden={true}
                className="bx--btn__icon"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="2"
                  width="28"
                  x="2"
                  y="26"
                />
                <path
                  d="M25.4,9c0.8-0.8,0.8-2,0-2.8c0,0,0,0,0,0l-3.6-3.6c-0.8-0.8-2-0.8-2.8,0c0,0,0,0,0,0l-15,15V24h6.4L25.4,9z M20.4,4L24,7.6	l-3,3L17.4,7L20.4,4z M6,22v-3.6l10-10l3.6,3.6l-10,10H6z"
                />
              </svg>
            </button>
          </div>
        </label>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ResourceList with extra content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section
      className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    >
      <div
        className="bx--structured-list-tbody"
      >
        <label
          aria-label="Item A"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={0}
        >
          <div
            className="bx--structured-list-td"
          >
            <div>
              <h5>
                row-0
              </h5>
              <svg
                aria-hidden={true}
                focusable="false"
                height={32}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16,10a6,6,0,0,0-6,6v8a6,6,0,0,0,12,0V16A6,6,0,0,0,16,10Zm-4.25,7.87h8.5v4.25h-8.5ZM16,28.25A4.27,4.27,0,0,1,11.75,24v-.13h8.5V24A4.27,4.27,0,0,1,16,28.25Zm4.25-12.13h-8.5V16a4.25,4.25,0,0,1,8.5,0Z"
                />
                <path
                  d="M30.66,19.21,24,13v9.1a4,4,0,0,0,8,0A3.83,3.83,0,0,0,30.66,19.21ZM28,24.35a2.25,2.25,0,0,1-2.25-2.25V17l3.72,3.47h0A2.05,2.05,0,0,1,30.2,22,2.25,2.25,0,0,1,28,24.35Z"
                />
                <path
                  d="M0,22.1a4,4,0,0,0,8,0V13L1.34,19.21A3.88,3.88,0,0,0,0,22.1Zm2.48-1.56h0L6.25,17v5.1a2.25,2.25,0,0,1-4.5,0A2.05,2.05,0,0,1,2.48,20.54Z"
                />
                <path
                  d="M15,5.5A3.5,3.5,0,1,0,11.5,9,3.5,3.5,0,0,0,15,5.5Zm-5.25,0A1.75,1.75,0,1,1,11.5,7.25,1.77,1.77,0,0,1,9.75,5.5Z"
                />
                <path
                  d="M20.5,2A3.5,3.5,0,1,0,24,5.5,3.5,3.5,0,0,0,20.5,2Zm0,5.25A1.75,1.75,0,1,1,22.25,5.5,1.77,1.77,0,0,1,20.5,7.25Z"
                />
              </svg>
            </div>
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item A
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item A"
            type="radio"
            value="Item A"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
        <label
          aria-label="Item B"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={1}
        >
          <div
            className="bx--structured-list-td"
          >
            <div>
              <h5>
                row-1
              </h5>
              <svg
                aria-hidden={true}
                focusable="false"
                height={32}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16,10a6,6,0,0,0-6,6v8a6,6,0,0,0,12,0V16A6,6,0,0,0,16,10Zm-4.25,7.87h8.5v4.25h-8.5ZM16,28.25A4.27,4.27,0,0,1,11.75,24v-.13h8.5V24A4.27,4.27,0,0,1,16,28.25Zm4.25-12.13h-8.5V16a4.25,4.25,0,0,1,8.5,0Z"
                />
                <path
                  d="M30.66,19.21,24,13v9.1a4,4,0,0,0,8,0A3.83,3.83,0,0,0,30.66,19.21ZM28,24.35a2.25,2.25,0,0,1-2.25-2.25V17l3.72,3.47h0A2.05,2.05,0,0,1,30.2,22,2.25,2.25,0,0,1,28,24.35Z"
                />
                <path
                  d="M0,22.1a4,4,0,0,0,8,0V13L1.34,19.21A3.88,3.88,0,0,0,0,22.1Zm2.48-1.56h0L6.25,17v5.1a2.25,2.25,0,0,1-4.5,0A2.05,2.05,0,0,1,2.48,20.54Z"
                />
                <path
                  d="M15,5.5A3.5,3.5,0,1,0,11.5,9,3.5,3.5,0,0,0,15,5.5Zm-5.25,0A1.75,1.75,0,1,1,11.5,7.25,1.77,1.77,0,0,1,9.75,5.5Z"
                />
                <path
                  d="M20.5,2A3.5,3.5,0,1,0,24,5.5,3.5,3.5,0,0,0,20.5,2Zm0,5.25A1.75,1.75,0,1,1,22.25,5.5,1.77,1.77,0,0,1,20.5,7.25Z"
                />
              </svg>
            </div>
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item B
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item B"
            type="radio"
            value="Item B"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
        <label
          aria-label="Item C"
          className=" bx--structured-list-row"
          onClick={[Function]}
          tabIndex={2}
        >
          <div
            className="bx--structured-list-td"
          >
            <div>
              <h5>
                row-2
              </h5>
              <svg
                aria-hidden={true}
                focusable="false"
                height={32}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16,10a6,6,0,0,0-6,6v8a6,6,0,0,0,12,0V16A6,6,0,0,0,16,10Zm-4.25,7.87h8.5v4.25h-8.5ZM16,28.25A4.27,4.27,0,0,1,11.75,24v-.13h8.5V24A4.27,4.27,0,0,1,16,28.25Zm4.25-12.13h-8.5V16a4.25,4.25,0,0,1,8.5,0Z"
                />
                <path
                  d="M30.66,19.21,24,13v9.1a4,4,0,0,0,8,0A3.83,3.83,0,0,0,30.66,19.21ZM28,24.35a2.25,2.25,0,0,1-2.25-2.25V17l3.72,3.47h0A2.05,2.05,0,0,1,30.2,22,2.25,2.25,0,0,1,28,24.35Z"
                />
                <path
                  d="M0,22.1a4,4,0,0,0,8,0V13L1.34,19.21A3.88,3.88,0,0,0,0,22.1Zm2.48-1.56h0L6.25,17v5.1a2.25,2.25,0,0,1-4.5,0A2.05,2.05,0,0,1,2.48,20.54Z"
                />
                <path
                  d="M15,5.5A3.5,3.5,0,1,0,11.5,9,3.5,3.5,0,0,0,15,5.5Zm-5.25,0A1.75,1.75,0,1,1,11.5,7.25,1.77,1.77,0,0,1,9.75,5.5Z"
                />
                <path
                  d="M20.5,2A3.5,3.5,0,1,0,24,5.5,3.5,3.5,0,0,0,20.5,2Zm0,5.25A1.75,1.75,0,1,1,22.25,5.5,1.77,1.77,0,0,1,20.5,7.25Z"
                />
              </svg>
            </div>
          </div>
          <div
            className="bx--structured-list-td bx--structured-list-content--nowrap"
          >
            <strong>
              Item C
            </strong>
          </div>
          <div
            className="bx--structured-list-td"
          >
            Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
          </div>
          <input
            checked={false}
            className="bx--structured-list-input"
            readOnly={true}
            tabIndex={-1}
            title="Item C"
            type="radio"
            value="Item C"
          />
          <div
            className="bx--structured-list-td"
            style={
              Object {
                "verticalAlign": "middle",
              }
            }
          >
            <svg
              className="bx--structured-list-svg"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </label>
      </div>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
